// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProForm 📦 submit props actionsRender is one 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
    <a>
      test
    </a>
  </form>
</div>
`;

exports[`ProForm 📦 submit props actionsRender=()=>[] 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</div>
`;

exports[`ProForm 📦 submit props actionsRender=()=>false 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</div>
`;

exports[`ProForm 📦 submit props actionsRender=false 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</div>
`;

exports[`ProForm 📦 submit props actionsRender=false 2`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
  </form>
</div>
`;

exports[`ProForm 📦 submit props render=()=>[] 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        提交并发布
      </span>
    </button>
  </form>
</div>
`;

exports[`ProForm 📦 submitter props support resetButtonProps 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="ant-btn ant-btn-default test_button"
          type="button"
        >
          <span>
            重 置
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            提 交
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`ProForm 📦 submitter props support submitButtonProps 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="ant-btn ant-btn-default"
          type="button"
        >
          <span>
            重 置
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <button
          class="ant-btn ant-btn-primary test_button"
          type="button"
        >
          <span>
            提 交
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`ProForm 📦 validateFieldsReturnFormatValue 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <div
    class="ant-row ant-form-item ant-form-item-has-success"
  >
    <div
      class="ant-col ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-picker ant-picker-status-success"
          >
            <div
              class="ant-picker-input"
            >
              <input
                autocomplete="off"
                id="date"
                placeholder="请选择"
                readonly=""
                size="12"
                title="2021-07-28"
                value="2021-07-28"
              />
              <span
                class="ant-picker-suffix"
              >
                <span
                  aria-label="calendar"
                  class="anticon anticon-calendar"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="calendar"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-picker-clear"
                role="button"
              >
                <span
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap: wrap; margin-bottom: -8px;"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px; padding-bottom: 8px;"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom: 8px;"
    >
      <button
        class="ant-btn ant-btn-default"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`ProForm 📦 when dateFormatter is a Function 1`] = `
<div
  class="ant-pro"
>
  <form
    autocomplete="off"
    class="ant-form ant-form-vertical"
  >
    <input
      style="display: none;"
      type="text"
    />
    <div
      class="ant-form-item"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-picker"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    id="datetime"
                    placeholder="请选择"
                    readonly=""
                    size="21"
                    title="2021-08-09 12:12:12"
                    value="2021-08-09 12:12:12"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-picker-clear"
                    role="button"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            提 交
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <button
          class="ant-btn ant-btn-default"
          type="button"
        >
          <span>
            重 置
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;
